feat: change default to postgresql

--- a/.env.example
+++ b/.env.example
@@ -37,8 +37,9 @@ APPLE_TEAM_ID=
 APPLE_KEY_ID=
 APPLE_P8=
 
-REDIST_PROV=
 REDIS_HOST=
 REDIS_PORT=
 REDIS_USERNAME=
 REDIS_PASSWORD=
+REDIS_DB=
+REDIST_PROV=
