--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "boilerplate-bun-for-noob",
-	"version": "0.1.0",
+	"name": "api",
+	"version": "0.3.4",
 	"module": "index.ts",
 	"type": "module",
 	"scripts": {
@@ -10,7 +10,7 @@
 		"lint": "eslint . ",
 		"reset-db-local": "prisma generate && npx prisma db push --force-reset && npm run seed",
 		"format": "prettier . --write",
-		"seed": "bun run prisma/seed.ts",
+		"seed": "bun run prisma/seed.ts && npx prisma db execute --file=./prisma/ImportData_vn_units.sql --schema=./prisma/schema.prisma",
 		"prisma:push": "npx prisma db push",
 		"postinstall": "prisma generate"
 	},
