fix: env | refreshtoken

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,13 @@ NODE_ENV=development
 ENV=local
 TZ=Asia/Ho_Chi_Minh
 BASE_URL=http://localhost:3082
+TITLE=App Title
 
 # my-cdn-you-can-ignore
 UPFILE_BEST_UPLOAD=https://use.upfile.best
 UPFILE_BEST_FILE_SERVE=https://aether.upfile.best
-UPFILE_BEST_TOKEN=
+UPFILE_BEST_UPLOAD_DIR_PATH=/sites/demo
+UPFILE_BEST_TOKEN_API=
 
 DATABASE_URL=mongodb://root:diginext@localhost:27017/local-app?authSource=admin&replicaSet=rs0
 
