--- a/.env.dev
+++ b/.env.dev
@@ -3,8 +3,10 @@ NODE_ENV=production
 ENV=production
 TZ=Asia/Ho_Chi_Minh
 BASE_URL=
+TITLE=App Title
 
 # my-cdn-you-can-ignore
 UPFILE_BEST_UPLOAD=https://use.upfile.best
 UPFILE_BEST_FILE_SERVE=https://aether.upfile.best
-UPFILE_BEST_TOKEN=
+UPFILE_BEST_UPLOAD_DIR_PATH=/sites/demo
+UPFILE_BEST_TOKEN_API=
