--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"async": "3.2.6",
 		"axios": "1.7.9",
 		"bcryptjs": "3.0.2",
+		"dayjs": "^1.11.13",
 		"diginext-utils": "3.13.8",
 		"ioredis": "5.5.0",
 		"jsonwebtoken": "9.0.2",
