feat: update auth | email native

--- a/.env.dev
+++ b/.env.dev
@@ -1,12 +1,13 @@
-PORT=3000
-NODE_ENV=production
-ENV=production
-TZ=Asia/Ho_Chi_Minh
-BASE_URL=
-TITLE=App Title
+PORT="3087"
+NODE_ENV="development"
+ENV="local"
+TZ="Asia/Ho_Chi_Minh"
 
-# my-cdn-you-can-ignore
-UPFILE_BEST_UPLOAD=https://use.upfile.best
-UPFILE_BEST_FILE_SERVE=https://aether.upfile.best
-UPFILE_BEST_UPLOAD_DIR_PATH=/sites/demo
-UPFILE_BEST_TOKEN_API=
+TITLE=
+
+BASE_URL=
+WEBAPP_URL=
+
+UPFILE_BEST_UPLOAD="https://up.ult.vn"
+UPFILE_BEST_FILE_SERVE="https://f.ult.vn"
+UPFILE_BEST_UPLOAD_DIR_PATH=/dev-may-delete/sites/ratio
