--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,10 @@ PORT=3082
 NODE_ENV=development
 ENV=local
 TZ=Asia/Ho_Chi_Minh
-BASE_URL=http://localhost:3082
 TITLE=App Title
+
+BASE_URL=http://localhost:3082
+WEBAPP_URL=
 
 # my-cdn-you-can-ignore
 UPFILE_BEST_UPLOAD=https://use.upfile.best
