--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-	"name": "api",
-	"version": "0.4.10",
+	"name": "boilerplate-bun-for-noob",
+	"version": "0.23.1",
 	"module": "index.ts",
 	"type": "module",
 	"scripts": {
 		"start": "npx prisma db push && bun run index.ts",
 		"build": "bun build ./index.ts --outdir ./dist --target bun --minify",
-		"test": "bun test --coverage",
+		"test": "bun --env-file=.env.test.local test --coverage",
+		"test:setup": "bun --env-file=.env.test.local run prisma/test-setup.ts",
 		"dev": "bun --watch index.ts",
-		"lint": "eslint . ",
+		"lint": "eslint . && tsc --noEmit --pretty",
 		"reset-db-local": "prisma generate && npx prisma db push --force-reset && npm run seed",
+		"reset-db-test": "bun --env-file=.env.test.local run -- prisma generate && bun --env-file=.env.test.local run -- npx prisma db push --force-reset",
 		"format": "prettier . --write",
 		"seed": "bun run prisma/seed.ts",
 		"prisma:push": "npx prisma db push",
@@ -20,7 +22,6 @@
 		"@types/async": "3.2.24",
 		"@types/bcryptjs": "2.4.6",
 		"@types/bun": "latest",
-		"@types/jsonwebtoken": "9.0.8",
 		"@types/node": "20.15",
 		"@types/uuid": "10.0.0",
 		"eslint": "9.20.1",
@@ -38,12 +39,13 @@
 		"async": "3.2.6",
 		"axios": "1.7.9",
 		"bcryptjs": "3.0.2",
-		"dayjs": "^1.11.13",
-		"diginext-utils": "3.13.8",
+		"dayjs": "1.11.13",
+		"diginext-utils": "3.13.12",
 		"ioredis": "5.5.0",
-		"jsonwebtoken": "9.0.2",
+		"jose": "6.1.0",
 		"pino": "9.6.0",
 		"pino-pretty": "13.0.0",
+		"sharp": "0.34.4",
 		"uuid": "11.1.0"
 	}
 }
