--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,8 @@
 	"peacock.color": "#3a0101",
 	"[dockerfile]": {
 		"editor.defaultFormatter": "ms-azuretools.vscode-containers"
+	},
+	"[sql]": {
+		"editor.defaultFormatter": "cweijan.vscode-mysql-client2"
 	}
 }
