--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"noPropertyAccessFromIndexSignature": false,
+		"skipLibCheck": true,
 
 		"paths": {
 			"@/*": ["./*"]
