--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
 	"name": "boilerplate-bun-for-noob",
-	"version": "0.6.0",
+	"version": "0.7.0",
 	"module": "index.ts",
 	"type": "module",
 	"scripts": {
 		"start": "npx prisma db push && bun run index.ts",
-		"build": "bun build ./index.ts --outdir ./dist --target bun --minify",
+		"build": "bun build ./index.ts --outdir ./dist --target bun --minify --sourcemap",
 		"test": "bun --env-file=.env.test.local test --coverage",
 		"test:setup": "bun --env-file=.env.test.local run prisma/test-setup.ts",
 		"dev": "bun --watch index.ts",
-		"lint": "eslint . && tsc --noEmit --pretty",
 		"reset-db-local": "prisma generate && npx prisma db push --force-reset && npm run seed",
 		"reset-db-test": "bun --env-file=.env.test.local run -- prisma generate && bun --env-file=.env.test.local run -- npx prisma db push --force-reset",
-		"format": "prettier . --write",
 		"seed": "bun run prisma/seed.ts",
 		"prisma:push": "npx prisma db push",
-		"postinstall": "prisma generate"
+		"postinstall": "prisma generate",
+		"format": "npm-run-all --parallel do-prettier lint",
+		"do-prettier": "prettier . --write",
+		"lint": "eslint . --fix && tsc --noEmit --pretty",
+		"pre-commit": "npm-run-all --sequential format check-secret check-types",
+		"check-types": "tsc --noEmit --pretty",
+		"check-secret": "node .husky/check-secret.cjs",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@eslint/js": "9.20.0",
@@ -23,28 +28,31 @@
 		"@types/bcryptjs": "2.4.6",
 		"@types/bun": "latest",
 		"@types/ms": "2.1.0",
-		"@types/node": "20.15.0",
+		"@types/node": "20.15",
 		"@types/uuid": "10.0.0",
 		"eslint": "9.20.1",
 		"eslint-plugin-import": "2.31.0",
 		"globals": "16.0.0",
 		"prettier": "3.5.3",
-		"prisma": "6.4.1",
+		"prisma": "6.19.1",
 		"typescript-eslint": "8.24.1"
 	},
 	"peerDependencies": {
 		"typescript": "5.7.3"
 	},
 	"dependencies": {
-		"@prisma/client": "6.4.1",
+		"@prisma/client": "6.19.1",
+		"@sendgrid/mail": "8.1.4",
 		"async": "3.2.6",
 		"axios": "1.7.9",
 		"bcryptjs": "3.0.2",
 		"dayjs": "1.11.13",
 		"diginext-utils": "3.13.15",
+		"husky": "9.1.7",
 		"ioredis": "5.5.0",
-		"jose": "6.1.0",
+		"jose": "6.1.3",
 		"mime": "4.1.0",
+		"npm-run-all": "4.1.5",
 		"pino": "9.6.0",
 		"pino-pretty": "13.0.0",
 		"sharp": "0.34.4",
