--- a/.env.prod
+++ b/.env.prod
@@ -6,7 +6,7 @@ BASE_URL=
 TITLE=App Title
 
 # my-cdn-you-can-ignore
-UPFILE_BEST_UPLOAD=https://use.upfile.best
+UPFILE_BEST_UPLOAD=https://v2.upfile.best
 UPFILE_BEST_FILE_SERVE=https://aether.upfile.best
 UPFILE_BEST_UPLOAD_DIR_PATH=/sites/demo
 UPFILE_BEST_TOKEN_API=
