--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"postinstall": "prisma generate",
 		"format": "npm-run-all --parallel do-prettier lint",
 		"do-prettier": "prettier . --write",
-		"lint": "eslint . --fix && tsc --noEmit --pretty",
+		"lint": "eslint . --fix | tsc --noEmit --pretty",
 		"pre-commit": "npm-run-all --sequential format check-secret check-types",
 		"check-types": "tsc --noEmit --pretty",
 		"check-secret": "node .husky/check-secret.cjs",
@@ -42,12 +42,11 @@
 	},
 	"dependencies": {
 		"@prisma/client": "6.19.1",
-		"@sendgrid/mail": "8.1.4",
 		"async": "3.2.6",
 		"axios": "1.7.9",
 		"bcryptjs": "3.0.2",
 		"dayjs": "1.11.13",
-		"diginext-utils": "3.13.15",
+		"diginext-utils": "4.1.2",
 		"husky": "9.1.7",
 		"ioredis": "5.5.0",
 		"jose": "6.1.3",
