fix: lib/server/db/index.ts | rm pino

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ UPFILE_BEST_TOKEN_API=
 
 DATABASE_URL=mongodb://root:diginext@localhost:27017/local-app?authSource=admin&replicaSet=rs0
 
+# Database connection pool (optional - has sensible defaults)
+DB_CONNECTION_LIMIT=50
+DB_POOL_TIMEOUT=10
+DB_MAX_RETRIES=3
+DB_RETRY_DELAY_MS=1000
+DB_IDLE_TIMEOUT=10
+
 ADMIN_EMAIL_DEFAULT=
 ADMIN_PASSWORD_DEFAULT=
 # openssl rand -hex 32
