feat: update auth middleware to remove unnecessary line and improve readability
feat: enhance logger middleware to skip logging for specific endpoint

chore: bump version to 0.8.1 and update prisma dependency

feat: implement background task queue and rate-limited write queue in helper

refactor: use write queue for refresh token operations to improve concurrency

refactor: apply write queue for role repository operations and clear user cache on updates

refactor: utilize write queue for social repository operations and invalidate user cache

refactor: apply write queue for user repository operations and clear relevant caches

refactor: use write queue for verification token repository operations

feat: add new routes for Baby Tracker features

feat: add requireHash middleware for enhanced security in OAuth and role routes

refactor: update user routes to include requireHash middleware for security

feat: implement email service for sending home invitation emails

feat: extend frontendAuthService to support Zalo social provider

refactor: modify refreshTokenService to create records before generating tokens

fix: update socialAuthService to include codeVerifier in social profile fetching

chore: update Dockerfile for improved build process

feat: add error logger service for centralized error logging

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,53 +1,35 @@
 # syntax=docker/dockerfile:1.4
 
-# ===================================
-#       BUILD ARGUMENTS
-# ===================================
 ARG NODE_VERSION=20.15
-ARG ALPINE_VERSION=3.19
-ARG UBUNTU_VERSION=22.04
 
 # ===================================
 #       PHASE 1 - DEPENDENCIES
 # ===================================
-FROM node:${NODE_VERSION} AS deps
+FROM reg.ult.vn/template/bun-api:v0-7-3-a AS deps
 WORKDIR /app
-
-RUN npm i -g bun
 
 # Copy package files and remove version
 COPY package.json prisma ./
-RUN VERSION=$(node -p "require('./package.json').version") 
 
-RUN bun install --force
+RUN bun install
 
 # ===================================
-#       PHASE 2 - BUILDER
+#       PHASE 2 - runner
 # ===================================
-FROM node:${NODE_VERSION} AS builder
-
-RUN npm i -g bun
-
-# Create non-root user and group
-RUN addgroup --system --gid 1001 nodejs \
-  && adduser --system --uid 1001 user \
-  && mkdir -p /usr/app \
-  && chown -R user:nodejs /usr/app
+FROM reg.ult.vn/template/bun-api-runner:v0-7-3-b AS runner
 
 WORKDIR /usr/app
 
-# Copy application files with explicit ownership
-COPY --from=deps --chown=user:nodejs /app/node_modules ./node_modules
-COPY . .
-COPY ./.env.dev ./.env
+# Copy dependencies from deps stage
+COPY --chown=runner:nodejs --from=deps /app/node_modules ./node_modules
+COPY --chown=runner:nodejs . .
+COPY --chown=runner:nodejs ./.env.dev ./.env
 
-# Switch to non-root user
-USER user
+# Switch to non-root runner
+USER runner
 
 # Expose application port
 EXPOSE 3000
-
-ENV NODE_ENV=production
 
 # Start the application with explicit host binding
 CMD ["bun", "run", "start"]
